--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,10 @@
         <h1>Etch a Sketch</h1>
     </header>
     <main>
+        <div id="options">
+            <input id="slider" type="range" value="16" min="1" max="64" />
+            
+        </div>
         <div id="grid">
 
         </div>
