--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
     <main>
         <div id="options">
             <input id="slider" type="range" value="16" min="1" max="64" />
-            
+            <button id="reset">reset</button>
         </div>
         <div id="grid">
 
