--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,8 @@
     </header>
     <main>
         <div id="options">
-            <input id="slider" type="range" value="16" min="1" max="64" />
+            <input id="slider" type="range" value="20" min="8" max="80" />
+            <span id="sliderText">grid size = 20 x 20</span>
             <button id="reset">reset</button>
         </div>
         <div id="grid">
