--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
     </header>
     <main>
         <div id="options">
+            <input type="color" id="colorpicker" value="#0000ff">
             <input id="slider" type="range" value="20" min="8" max="80" />
             <span id="sliderText">grid size = 20 x 20</span>
             <button id="reset">reset</button>
