minor CSS changes

--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,11 @@
     <main>
         <div id="options">
             <input type="color" id="colorpicker" value="#0000ff">
-            <input id="slider" type="range" value="20" min="8" max="80" />
-            <span id="sliderText">grid size = 20 x 20</span>
+            <div class="slidercontainer">
+               <input id="slider" type="range" value="20" min="8" max="80" />
+                <span id="sliderText">grid size = 20 x 20</span> 
+            </div>
+            
             <button id="reset">reset</button>
         </div>
         <div id="grid">
