rainbow mode added

--- a/index.htm
+++ b/index.htm
@@ -15,12 +15,15 @@
     <main>
         <div id="options">
             <input type="color" id="colorpicker" value="#0000ff">
+            <button id="color">color mode</button>
+            <button id="rainbow">rainbow mode</button>
+            <button id="clear">clear</button>
             <div class="slidercontainer">
                <input id="slider" type="range" value="20" min="8" max="80" />
-                <span id="sliderText">grid size = 20 x 20</span> 
+                <span id="sliderText">20 x 20</span> 
             </div>
             
-            <button id="reset">reset</button>
+            
         </div>
         <div id="grid">
 
