--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     </header>
     <main>
         <div id="options">
-            <input type="color" id="colorpicker" value="#0000ff">
+            <input type="color" id="colorpicker" value="#c4b2c7">
             <button id="color">color mode</button>
             <button id="rainbow">rainbow mode</button>
             <button id="clear">clear</button>
