--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
         </div>
     </main>
     <footer>
-
+        <p>made by <a href="https://github.com/ABustos2606/etch-a-sketch" target="_blank">Alejandro Bustos</a> for <a href="theodinproject.com" target="_blank">The Odin Project course</a></p>
     </footer>
     <script src="main.js"></script>
 </body>
